@@ -1080,8 +1080,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Search Engine:",IDC_STATIC,7,8,49,8
     EDITTEXT        IDC_SEARCHENGINE,61,7,182,12,ES_AUTOHSCROLL
-    LTEXT           "Max. Size Unit:",IDC_STATIC,7,38,49,8
-    COMBOBOX        IDC_MAXSIZEUNIT,61,37,39,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Size Units:",IDC_STATIC,7,38,34,8
+    COMBOBOX        IDC_MAXSIZEUNIT,116,37,39,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Allow only one instance",IDC_ALLOWONLYONEINSTANCE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,71,91,10
     LTEXT           "PE Viewer:",IDC_STATIC,7,23,35,8
@@ -1095,6 +1095,8 @@ BEGIN
     LTEXT           "Icon Processes:",IDC_STATIC,7,55,52,8
     CONTROL         "Enable plugins",IDC_ENABLEPLUGINS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,141,95,61,10
     PUSHBUTTON      "Font...",IDC_FONT,7,121,50,14
+    LTEXT           "to",IDC_STATIC,105,38,8,8
+    COMBOBOX        IDC_MINSIZEUNIT,61,37,39,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_OPTHIGHLIGHTING DIALOGEX 0, 0, 250, 174
